# Proxy-Manager

./: .gitignore  LICENSE  README.md  alembic.ini  package-lock.json  package.json  proxy-manager  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: lint.yml  tests.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py  0002_add_resolvers_peers_mailers_httperrors_cache.py  0003_add_ssl_certificates.py  0004_add_backend_frontend_server_fields.py  0005_add_frontend_option_value_comment.py  0006_split_existing_frontend_options.py  0007_expand_listen_block_fields.py  0008_listen_block_binds_table.py  0009_expand_resolver_peer_mailer_httperrors.py  0010_add_smtp_auth_to_mailer_entries.py  0011_add_config_versions.py  0012_add_unique_constraints_and_fixes.py
control/: build.sh  deploy.sh  docker.sh  enter.sh  helpers.sh
docker/: Dockerfile  docker-compose-server.yml  docker-compose.yml
docker/data/: .env_local  .env_prod
proxy_manager/: __init__.py
proxy_manager/api/: __init__.py  dependencies.py
proxy_manager/config_parser/: __init__.py  generator.py  parser.py  snapshot.py
proxy_manager/database/: __init__.py  connection.py
proxy_manager/utilities/: __init__.py  auth.py  lifespan.py  rate_limit.py  settings.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_auth.py  test_auth_protection.py  test_backends.py  test_caches.py  test_config.py  test_frontends.py  test_http_errors.py  test_listen.py  test_mailers.py  test_peers.py  test_resolvers.py  test_settings.py  test_ssl_certificates.py  (+2 more)
(+167 files in other folders)
